[gd_scene load_steps=79 format=3 uid="uid://cos3e41wxorb1"]

[ext_resource type="Texture2D" uid="uid://cu2jiisuwepe" path="res://Sprites/Background.png" id="1_mivx2"]
[ext_resource type="Texture2D" uid="uid://f2seb0rdxcqp" path="res://Sprites/Screen wave.png" id="2_a37pa"]
[ext_resource type="PackedScene" uid="uid://drw6nlss8ept" path="res://Scenes/Platform.tscn" id="3_7seoc"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="4_80kjv"]
[ext_resource type="Texture2D" uid="uid://cbedfwitujp4" path="res://Sprites/Player.png" id="5_f3ewc"]
[ext_resource type="Texture2D" uid="uid://c2vhwlwkf77l5" path="res://Sprites/Platform.png" id="6_f87xl"]
[ext_resource type="AudioStream" uid="uid://cwe61fm2wo0j5" path="res://Audio/Darkside - Nightcore.mp3" id="7_hd2up"]
[ext_resource type="Script" path="res://Scenes/Obstacles.gd" id="8_b84m2"]
[ext_resource type="AudioStream" uid="uid://d2gsh32ufv27d" path="res://Audio/Laser.mp3" id="10_4poid"]
[ext_resource type="SpriteFrames" uid="uid://db5j28lmbhkr2" path="res://Scenes/Laser.tres" id="10_g37s4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pgqh1"]
atlas = ExtResource("2_a37pa")
region = Rect2(0, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_7aqk6"]
atlas = ExtResource("2_a37pa")
region = Rect2(160, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi30y"]
atlas = ExtResource("2_a37pa")
region = Rect2(320, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg0so"]
atlas = ExtResource("2_a37pa")
region = Rect2(480, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_72vsm"]
atlas = ExtResource("2_a37pa")
region = Rect2(640, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qc3i"]
atlas = ExtResource("2_a37pa")
region = Rect2(800, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p1ch"]
atlas = ExtResource("2_a37pa")
region = Rect2(960, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkglo"]
atlas = ExtResource("2_a37pa")
region = Rect2(1120, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5x33"]
atlas = ExtResource("2_a37pa")
region = Rect2(1280, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_20p5l"]
atlas = ExtResource("2_a37pa")
region = Rect2(1440, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_n15b1"]
atlas = ExtResource("2_a37pa")
region = Rect2(1600, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_uudrr"]
atlas = ExtResource("2_a37pa")
region = Rect2(1760, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvp0o"]
atlas = ExtResource("2_a37pa")
region = Rect2(1920, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_xphlw"]
atlas = ExtResource("2_a37pa")
region = Rect2(2080, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_4a20h"]
atlas = ExtResource("2_a37pa")
region = Rect2(2240, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_um3dx"]
atlas = ExtResource("2_a37pa")
region = Rect2(2400, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_uyocj"]
atlas = ExtResource("2_a37pa")
region = Rect2(2560, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwjoy"]
atlas = ExtResource("2_a37pa")
region = Rect2(2720, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_64nqa"]
atlas = ExtResource("2_a37pa")
region = Rect2(2880, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_774jq"]
atlas = ExtResource("2_a37pa")
region = Rect2(3040, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_rud8h"]
atlas = ExtResource("2_a37pa")
region = Rect2(3200, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn0fm"]
atlas = ExtResource("2_a37pa")
region = Rect2(3360, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmprv"]
atlas = ExtResource("2_a37pa")
region = Rect2(3520, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_csjxk"]
atlas = ExtResource("2_a37pa")
region = Rect2(3680, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycurj"]
atlas = ExtResource("2_a37pa")
region = Rect2(3840, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sfd1"]
atlas = ExtResource("2_a37pa")
region = Rect2(4000, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_u86gl"]
atlas = ExtResource("2_a37pa")
region = Rect2(4160, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_luc7l"]
atlas = ExtResource("2_a37pa")
region = Rect2(4320, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yvuh"]
atlas = ExtResource("2_a37pa")
region = Rect2(4480, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3b5f"]
atlas = ExtResource("2_a37pa")
region = Rect2(4640, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_jupmj"]
atlas = ExtResource("2_a37pa")
region = Rect2(4800, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wual"]
atlas = ExtResource("2_a37pa")
region = Rect2(4960, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1jul"]
atlas = ExtResource("2_a37pa")
region = Rect2(5120, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_88ojb"]
atlas = ExtResource("2_a37pa")
region = Rect2(5280, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu7q7"]
atlas = ExtResource("2_a37pa")
region = Rect2(5440, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik1nb"]
atlas = ExtResource("2_a37pa")
region = Rect2(5600, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbusu"]
atlas = ExtResource("2_a37pa")
region = Rect2(5760, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejlr8"]
atlas = ExtResource("2_a37pa")
region = Rect2(5920, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wl38"]
atlas = ExtResource("2_a37pa")
region = Rect2(6080, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_udo1f"]
atlas = ExtResource("2_a37pa")
region = Rect2(6240, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj5yb"]
atlas = ExtResource("2_a37pa")
region = Rect2(6400, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_01ep0"]
atlas = ExtResource("2_a37pa")
region = Rect2(6560, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpxjc"]
atlas = ExtResource("2_a37pa")
region = Rect2(6720, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ai1q"]
atlas = ExtResource("2_a37pa")
region = Rect2(6880, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ror0w"]
atlas = ExtResource("2_a37pa")
region = Rect2(7040, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qjna"]
atlas = ExtResource("2_a37pa")
region = Rect2(7200, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_wv1au"]
atlas = ExtResource("2_a37pa")
region = Rect2(7360, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lumh"]
atlas = ExtResource("2_a37pa")
region = Rect2(7520, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn0yg"]
atlas = ExtResource("2_a37pa")
region = Rect2(7680, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k8r7"]
atlas = ExtResource("2_a37pa")
region = Rect2(7840, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_eve43"]
atlas = ExtResource("2_a37pa")
region = Rect2(8000, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_uokps"]
atlas = ExtResource("2_a37pa")
region = Rect2(8160, 0, 160, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_sj8ox"]
atlas = ExtResource("2_a37pa")
region = Rect2(8320, 0, 160, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_q0nkj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgqh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aqk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi30y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg0so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72vsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qc3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p1ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkglo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5x33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20p5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n15b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uudrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvp0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xphlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4a20h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um3dx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uyocj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwjoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64nqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_774jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rud8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn0fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmprv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csjxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycurj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sfd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u86gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luc7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yvuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3b5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jupmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wual")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1jul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88ojb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu7q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik1nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbusu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejlr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wl38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udo1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj5yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01ep0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpxjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ai1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ror0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qjna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wv1au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lumh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn0yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k8r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eve43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uokps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj8ox")
}],
"loop": true,
"name": &"default",
"speed": 45.05
}]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_vlop4"]
resource_name = "<null>"
scenes/1/scene = ExtResource("3_7seoc")

[sub_resource type="TileSet" id="TileSet_ajxld"]
sources/0 = SubResource("TileSetScenesCollectionSource_vlop4")

[sub_resource type="AtlasTexture" id="AtlasTexture_ggb8l"]
atlas = ExtResource("6_f87xl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0od1t"]
atlas = ExtResource("6_f87xl")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie17n"]
atlas = ExtResource("6_f87xl")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_el3uj"]
atlas = ExtResource("6_f87xl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e2t4"]
atlas = ExtResource("6_f87xl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sexcp"]
atlas = ExtResource("6_f87xl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3j444"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggb8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0od1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie17n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el3uj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e2t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sexcp")
}],
"loop": true,
"name": &"no move",
"speed": 1.7
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drtfg"]
size = Vector2(212, 87.0001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1bd4"]
size = Vector2(126, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xdedj"]
size = Vector2(19.6464, 125.721)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f16qf"]
size = Vector2(20, 72.4827)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ytgsf"]
size = Vector2(16.5896, 71.8527)

[node name="Root" type="Node2D"]
scale = Vector2(0.508741, 0.508741)

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(1236.39, 711.561)
scale = Vector2(63.3665, -65.5558)
texture = ExtResource("1_mivx2")

[node name="BGLaser1" type="AnimatedSprite2D" parent="BG"]
modulate = Color(1, 1, 1, 0.560784)
position = Vector2(0.55834, -3.79301)
scale = Vector2(0.660477, -1.12241)
sprite_frames = SubResource("SpriteFrames_q0nkj")
autoplay = "default"
frame = 10
frame_progress = 0.38682

[node name="BGLaser2" type="AnimatedSprite2D" parent="BG"]
modulate = Color(1, 1, 1, 0.560784)
position = Vector2(0.55834, -3.79301)
rotation = 3.14159
scale = Vector2(0.660475, -1.1224)
sprite_frames = SubResource("SpriteFrames_q0nkj")
autoplay = "default"
frame = 10
frame_progress = 0.38682

[node name="BGLaser3" type="AnimatedSprite2D" parent="BG"]
modulate = Color(1, 1, 1, 0.560784)
position = Vector2(0.55834, -2.37944)
rotation = 1.57079
scale = Vector2(0.6157, -1.16118)
sprite_frames = SubResource("SpriteFrames_q0nkj")
autoplay = "default"
frame = 10
frame_progress = 0.38682

[node name="BGLaser4" type="AnimatedSprite2D" parent="BG"]
modulate = Color(1, 1, 1, 0.560784)
position = Vector2(0.55834, -2.37944)
rotation = -1.5708
scale = Vector2(0.6157, -1.16118)
sprite_frames = SubResource("SpriteFrames_q0nkj")
autoplay = "default"
frame = 10
frame_progress = 0.38682

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(536.619, 442.269)
scale = Vector2(3.93968, 2.13656)
tile_set = SubResource("TileSet_ajxld")
format = 2
layer_0/tile_data = PackedInt32Array(1376266, 0, 65536, 1441792, 0, 65536, 1441812, 0, 65536, 1769463, 0, 65536, 1769502, 0, 65536, 786427, 0, 65536, 786437, 0, 65536, 786448, 0, 65536, 655386, 0, 65536)

[node name="Platform" type="StaticBody2D" parent="."]
position = Vector2(-6494.47, -4119.98)
scale = Vector2(14.3889, 8.56419)

[node name="PlatformSprite" type="AnimatedSprite2D" parent="Platform"]
position = Vector2(537, 730)
scale = Vector2(3.86902, 3.86902)
sprite_frames = SubResource("SpriteFrames_3j444")
animation = &"no move"
autoplay = "no move"

[node name="PlatformCollision" type="CollisionShape2D" parent="Platform"]
position = Vector2(539, 717)
shape = SubResource("RectangleShape2D_drtfg")

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1236.39, 711.561)
scale = Vector2(63.3665, -65.5558)
stream = ExtResource("7_hd2up")
autoplay = true

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(2462.94, 1159.73)
scale = Vector2(1.01454, 1.01454)
script = ExtResource("4_80kjv")

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
position = Vector2(-8.21732, -8.33808)
scale = Vector2(2.34205, 2.34205)
texture = ExtResource("5_f3ewc")

[node name="PlayerCollision" type="CollisionShape2D" parent="Player"]
position = Vector2(-8.21732, -6.83808)
scale = Vector2(0.561996, 0.561996)
shape = SubResource("RectangleShape2D_k1bd4")

[node name="PlayerCam" type="Camera2D" parent="Player"]
position = Vector2(-32.937, -114.31)
scale = Vector2(6.25846, 2.59118)
ignore_rotation = false
zoom = Vector2(0.7, 0.7)
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="Obstacles" type="Node2D" parent="."]
script = ExtResource("8_b84m2")

[node name="Laser" type="AnimatedSprite2D" parent="Obstacles"]
position = Vector2(1228.52, -743.011)
scale = Vector2(14.6925, 29.7533)
sprite_frames = ExtResource("10_g37s4")

[node name="Laser" type="Area2D" parent="Obstacles/Laser"]
collision_layer = 2

[node name="LaserCol" type="CollisionShape2D" parent="Obstacles/Laser/Laser"]
position = Vector2(0.590622, 20.1497)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_xdedj")

[node name="LaserB" type="AnimatedSprite2D" parent="Obstacles"]
position = Vector2(902.227, 1525.33)
rotation = 1.5708
scale = Vector2(7.30173, 35.4143)
sprite_frames = ExtResource("10_g37s4")

[node name="LaserB" type="Area2D" parent="Obstacles/LaserB"]
position = Vector2(9.96042, -0.277528)
collision_layer = 4

[node name="LaserCol" type="CollisionShape2D" parent="Obstacles/LaserB/LaserB"]
position = Vector2(-4.57713, -16.7067)
shape = SubResource("RectangleShape2D_xdedj")

[node name="LaserM" type="AnimatedSprite2D" parent="Obstacles"]
position = Vector2(931.712, 1214.76)
rotation = 1.5708
scale = Vector2(7.30173, 35.4143)
sprite_frames = ExtResource("10_g37s4")

[node name="LaserM" type="Area2D" parent="Obstacles/LaserM"]

[node name="LaserCol" type="CollisionShape2D" parent="Obstacles/LaserM/LaserM"]
position = Vector2(-14.8064, -14.9861)
shape = SubResource("RectangleShape2D_xdedj")

[node name="LaserH" type="AnimatedSprite2D" parent="Obstacles"]
position = Vector2(919.918, 721.389)
rotation = 1.5708
scale = Vector2(7.30173, 35.4143)
sprite_frames = ExtResource("10_g37s4")

[node name="LaserH" type="Area2D" parent="Obstacles/LaserH"]
position = Vector2(0.538399, 0)

[node name="LaserCol" type="CollisionShape2D" parent="Obstacles/LaserH/LaserH"]
position = Vector2(0.538094, -15.2081)
shape = SubResource("RectangleShape2D_xdedj")

[node name="LaserL" type="AnimatedSprite2D" parent="Obstacles"]
position = Vector2(190.667, -2633.95)
scale = Vector2(18.4659, 53.4781)
sprite_frames = ExtResource("10_g37s4")

[node name="LaserL" type="Area2D" parent="Obstacles/LaserL"]

[node name="LaserCol" type="CollisionShape2D" parent="Obstacles/LaserL/LaserL"]
position = Vector2(0.510438, 46.9372)
shape = SubResource("RectangleShape2D_f16qf")

[node name="LaserR" type="AnimatedSprite2D" parent="Obstacles"]
position = Vector2(2291.93, -2643.78)
scale = Vector2(19.0163, 53.4781)
sprite_frames = ExtResource("10_g37s4")

[node name="LaserR" type="Area2D" parent="Obstacles/LaserR"]

[node name="LaserCol" type="CollisionShape2D" parent="Obstacles/LaserR/LaserR"]
position = Vector2(0.680706, 46.1287)
shape = SubResource("RectangleShape2D_ytgsf")

[node name="LaserSFX" type="AudioStreamPlayer2D" parent="Obstacles"]
stream = ExtResource("10_4poid")

[connection signal="enterLaser" from="Player" to="Obstacles" method="_on_player_enter_laser"]
[connection signal="exitLaser" from="Player" to="Obstacles" method="_on_player_exit_laser"]
[connection signal="laser" from="Obstacles" to="Player" method="_on_obstacles_laser"]
[connection signal="laserB" from="Obstacles" to="Player" method="_on_obstacles_laser_b"]
[connection signal="laserH" from="Obstacles" to="Player" method="_on_obstacles_laser_h"]
[connection signal="laserL" from="Obstacles" to="Player" method="_on_obstacles_laser_l"]
[connection signal="laserM" from="Obstacles" to="Player" method="_on_obstacles_laser_m"]
[connection signal="laserR" from="Obstacles" to="Player" method="_on_obstacles_laser_r"]
[connection signal="body_entered" from="Obstacles/Laser/Laser" to="Player" method="_on_laser_body_entered"]
[connection signal="body_exited" from="Obstacles/Laser/Laser" to="Player" method="_on_laser_body_exited"]
[connection signal="body_entered" from="Obstacles/LaserB/LaserB" to="Player" method="_on_laser_b_body_entered"]
[connection signal="body_exited" from="Obstacles/LaserB/LaserB" to="Player" method="_on_laser_b_body_exited"]
[connection signal="body_entered" from="Obstacles/LaserM/LaserM" to="Player" method="_on_laser_m_body_entered"]
[connection signal="body_exited" from="Obstacles/LaserM/LaserM" to="Player" method="_on_laser_m_body_exited"]
[connection signal="body_entered" from="Obstacles/LaserH/LaserH" to="Player" method="_on_laser_h_body_entered"]
[connection signal="body_exited" from="Obstacles/LaserH/LaserH" to="Player" method="_on_laser_h_body_exited"]
[connection signal="body_entered" from="Obstacles/LaserL/LaserL" to="Player" method="_on_laser_l_body_entered"]
[connection signal="body_exited" from="Obstacles/LaserL/LaserL" to="Player" method="_on_laser_l_body_exited"]
[connection signal="body_entered" from="Obstacles/LaserR/LaserR" to="Player" method="_on_laser_r_body_entered"]
[connection signal="body_exited" from="Obstacles/LaserR/LaserR" to="Player" method="_on_laser_r_body_exited"]
